# sea-orm-grpc-example

./: .env.example  .gitignore  Cargo.toml
api/: Cargo.toml  build.rs
api/proto/: post.proto
api/src/: lib.rs  post.rs
auth/: Cargo.toml
auth/src/: auth_type.rs  claims.rs  lib.rs  member_role.rs
auth/tests/: lib.rs
entity/: Cargo.toml
entity/src/: post.rs
migration/: Cargo.toml
migration/src/: lib.rs
service/: Cargo.toml
src/: main.rs
tests/: lib.rs
