[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
entity = { workspace = true }

[dependencies.sea-orm]
version = "1.1.2"
features = ["debug-print", "sqlx-mysql", "runtime-tokio"]

[dev-dependencies]
tokio = { workspace = true }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
